--- a/ServerSideProgramming/ServerSideProgramming.fsproj
+++ b/ServerSideProgramming/ServerSideProgramming.fsproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <Compile Include="Models/ErrorViewModel.fs" />
         <Compile Include="Controllers/HomeController.fs" />
+        <Compile Include="Controllers\HelloController.fs" />
         <Compile Include="Startup.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
